--- a/package.json
+++ b/package.json
@@ -7,13 +7,27 @@
     "start:dev": "nodemon ./bin/www"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "body-parser": "~1.18.2",
+    "connect-redis": "^3.3.3",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "dotenv": "^5.0.1",
+    "express-session": "^1.15.6",
+    "lodash": "^4.17.10",
+    "mongoose": "^5.0.15",
+    "mongoose-find-or-create": "^1.3.1",
+    "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0",
+    "passport.socketio": "^3.7.0",
+    "redis": "^2.8.0",
+    "serve-favicon": "~2.4.5",
+    "shortid": "^2.2.13",
+    "socket.io": "^2.1.1",
+    "socket.io-redis": "^5.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
